# a2de

./: CMakeLists.txt  README.md
include/a2de/: private.hpp  public.hpp
src/: main.cpp
